# compass-cli

./: .editorconfig  .env.example  .gitignore  LICENSE  README.md  requirements.txt
.github/workflows/: npm-publish.yml  release.yml
design/: logo.txt
docs/: ARCHITECTURE.md  LOCAL_FIRST.md
examples/vault/: README.md
examples/vault/metrics/: weight.csv
examples/vault/notes/: project-ideas.md  welcome.md
npm/: README.md  package.json
npm/scripts/: install.js
packaging/: build.ps1  build.sh  checksums.sh  pyinstaller.spec
python/: README.md  pyproject.toml
python/compass/: __init__.py  __main__.py  cli.py  config.py  logging.py  mcp.py  paths.py  sandbox.py  sessions.py  setup.py  vault.py
python/compass/commands/: __init__.py  slash_registry.py
python/compass/db/: __init__.py  manager.py  migrate.py  models.py  schema.sql
python/compass/ingest/: __init__.py  chunking.py  loaders.py  pipeline.py
python/compass/llm/: __init__.py  api_anthropic.py  api_google.py  api_openai.py  base.py  local_ollama.py
python/compass/prompts/: planner.md  researcher.md  system.md
python/compass/rag/: __init__.py  cite.py  embed.py  rerank.py  retrieve.py
python/compass/tools/: __init__.py  decision_journal.py  planner.py  weekly_review.py
python/tests/: test_cli_smoke.py  test_config.py
scripts/: make_release_notes.py  sync_version.py
